--- a/assets/sass/components/intro.sass
+++ b/assets/sass/components/intro.sass
@@ -45,3 +45,25 @@
     left: 0
   &-content
     float: right
+
+.section-wrapper
+  min-height: 100vh
+  display: flex
+  flex-direction: row
+
+.subsection
+  flex: 1
+  display: flex
+  text-align: center
+  flex-direction: column
+  justify-content: center
+  &-white
+    @extend .subsection
+    background-color: white
+.intro
+  // top: 50%
+  // left: 50%
+  // position: absolute
+  // text-align: center
+  // vertical-align: middle
+  // line-height: 100vh
