--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -340,13 +340,6 @@ h1 {
   font-weight: 400;
   font-size: 3.4em; }
 
-.section-wrapper {
-  min-height: 100vh;
-  width: 100%;
-  position: relative;
-  display: block;
-  margin: 0 0 0 0; }
-
 .clear {
   clear: both; }
 
@@ -395,6 +388,20 @@ h1 {
   left: 0; }
 .work-content {
   float: right; }
+
+.section-wrapper {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: row; }
+
+.subsection, .subsection-white {
+  flex: 1;
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  justify-content: center; }
+  .subsection-white {
+    background-color: white; }
 
 .headroom {
   text-align: center;
