--- a/assets/sass/base/general.sass
+++ b/assets/sass/base/general.sass
@@ -3,9 +3,10 @@
 //   -moz-box-sizing: border-box
 //   box-sizing: border-box
 //   margin: 0
+$font: Lato
 
 body
-  font-family: Raleway
+  font-family: $font
 
 h1
   font-weight: 400
