--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1,295 +1,4 @@
-/*
-
-  COLORS
-  Better default colors for the web
-
-*/
-/*
-
-   VARIABLES
-
-   - Cool
-   - Warm
-   - Gray Scale
-
-*/
-/*
-
-   SKINS
-   - Backgrounds
-   - Colors
-   - Border colors
-   - SVG fills
-   - SVG Strokes
-
-*/
-/* Backgrounds */
-.bg-navy {
-  background-color: #001F3F; }
-
-.bg-darknavy {
-  background-color: #001b48; }
-
-.bg-blue {
-  background-color: #46AAD9; }
-
-.bg-aqua {
-  background-color: #7FDBFF; }
-
-.bg-teal {
-  background-color: #39CCCC; }
-
-.bg-olive {
-  background-color: #3D9970; }
-
-.bg-green {
-  background-color: #2ECC40; }
-
-.bg-lime {
-  background-color: #01FF70; }
-
-.bg-yellow {
-  background-color: #FFDC00; }
-
-.bg-orange {
-  background-color: #FF851B; }
-
-.bg-red {
-  background-color: #FF4136; }
-
-.bg-fuchsia {
-  background-color: #F012BE; }
-
-.bg-purple {
-  background-color: #B10DC9; }
-
-.bg-maroon {
-  background-color: #85144B; }
-
-.bg-white {
-  background-color: #FFFFFF; }
-
-.bg-gray {
-  background-color: #AAAAAA; }
-
-.bg-silver {
-  background-color: #DDDDDD; }
-
-.bg-black {
-  background-color: #111111; }
-
-/* Colors */
-.navy {
-  color: #001F3F; }
-
-.blue {
-  color: #0074D9; }
-
-.aqua {
-  color: #7FDBFF; }
-
-.teal {
-  color: #39CCCC; }
-
-.olive {
-  color: #3D9970; }
-
-.green {
-  color: #2ECC40; }
-
-.lime {
-  color: #01FF70; }
-
-.yellow {
-  color: #FFDC00; }
-
-.orange {
-  color: #FF851B; }
-
-.red {
-  color: #FF4136; }
-
-.fuchsia {
-  color: #F012BE; }
-
-.purple {
-  color: #B10DC9; }
-
-.maroon {
-  color: #85144B; }
-
-.white {
-  color: #FFFFFF; }
-
-.silver {
-  color: #DDDDDD; }
-
-.gray {
-  color: #AAAAAA; }
-
-.black {
-  color: #111111; }
-
-/* Border colors
-
-   Use with another border utility that sets border-width and style
-   i.e .border { border-width: 1px); border-style: solid); }
-*/
-.border--navy {
-  border-color: #001F3F; }
-
-.border--blue {
-  border-color: #0074D9; }
-
-.border--aqua {
-  border-color: #7FDBFF; }
-
-.border--teal {
-  border-color: #39CCCC; }
-
-.border--olive {
-  border-color: #3D9970; }
-
-.border--green {
-  border-color: #2ECC40; }
-
-.border--lime {
-  border-color: #01FF70; }
-
-.border--yellow {
-  border-color: #FFDC00; }
-
-.border--orange {
-  border-color: #FF851B; }
-
-.border--red {
-  border-color: #FF4136; }
-
-.border--fuchsia {
-  border-color: #F012BE; }
-
-.border--purple {
-  border-color: #B10DC9; }
-
-.border--maroon {
-  border-color: #85144B; }
-
-.border--white {
-  border-color: #FFFFFF; }
-
-.border--gray {
-  border-color: #AAAAAA; }
-
-.border--silver {
-  border-color: #DDDDDD; }
-
-.border--black {
-  border-color: #111111; }
-
-/* Fills for SVG */
-.fill-navy {
-  fill: #001F3F; }
-
-.fill-blue {
-  fill: #0074D9; }
-
-.fill-aqua {
-  fill: #7FDBFF; }
-
-.fill-teal {
-  fill: #39CCCC; }
-
-.fill-olive {
-  fill: #3D9970; }
-
-.fill-green {
-  fill: #2ECC40; }
-
-.fill-lime {
-  fill: #01FF70; }
-
-.fill-yellow {
-  fill: #FFDC00; }
-
-.fill-orange {
-  fill: #FF851B; }
-
-.fill-red {
-  fill: #FF4136; }
-
-.fill-fuchsia {
-  fill: #F012BE; }
-
-.fill-purple {
-  fill: #B10DC9; }
-
-.fill-maroon {
-  fill: #85144B; }
-
-.fill-white {
-  fill: #FFFFFF; }
-
-.fill-gray {
-  fill: #AAAAAA; }
-
-.fill-silver {
-  fill: #DDDDDD; }
-
-.fill-black {
-  fill: #111111; }
-
-/* Strokes for SVG */
-.stroke-navy {
-  stroke: #001F3F; }
-
-.stroke-blue {
-  stroke: #0074D9; }
-
-.stroke-aqua {
-  stroke: #7FDBFF; }
-
-.stroke-teal {
-  stroke: #39CCCC; }
-
-.stroke-olive {
-  stroke: #3D9970; }
-
-.stroke-green {
-  stroke: #2ECC40; }
-
-.stroke-lime {
-  stroke: #01FF70; }
-
-.stroke-yellow {
-  stroke: #FFDC00; }
-
-.stroke-orange {
-  stroke: #FF851B; }
-
-.stroke-red {
-  stroke: #FF4136; }
-
-.stroke-fuchsia {
-  stroke: #F012BE; }
-
-.stroke-purple {
-  stroke: #B10DC9; }
-
-.stroke-maroon {
-  stroke: #85144B; }
-
-.stroke-white {
-  stroke: #FFFFFF; }
-
-.stroke-gray {
-  stroke: #AAAAAA; }
-
-.stroke-silver {
-  stroke: #DDDDDD; }
-
-.stroke-black {
-  stroke: #111111; }
-
+@import url(http://fonts.googleapis.com/css?family=Lato:900);
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -334,7 +43,7 @@ table {
   border-spacing: 0; }
 
 body {
-  font-family: Raleway; }
+  font-family: Lato; }
 
 h1 {
   font-weight: 400;
@@ -342,6 +51,59 @@ h1 {
 
 .clear {
   clear: both; }
+
+*, *:before, *:after {
+  box-sizing: border-box; }
+
+body {
+  font-family: 'Lato', sans-serif; }
+
+.letter {
+  display: inline-block;
+  font-weight: 900;
+  font-size: 5em;
+  margin: 0.07em;
+  position: relative;
+  transform-style: preserve-3d;
+  perspective: 400;
+  z-index: 1; }
+
+.orange {
+  color: #F58255; }
+
+.blue {
+  color: #46AAD9; }
+
+.grey {
+  color: #AAAAAA; }
+
+.letter:before, .letter:after {
+  position: absolute;
+  content: attr(data-letter);
+  transform-origin: top left;
+  top: 0;
+  left: 0; }
+
+.letter, .letter:before, .letter:after {
+  transition: all 0.3s ease-in-out; }
+
+.letter:before {
+  color: #fff;
+  text-shadow: -1px 0px 1px rgba(255, 255, 255, 0.8), 1px 0px 1px rgba(0, 0, 0, 0.8);
+  z-index: 3;
+  transform: rotateX(0deg) rotateY(-18deg) rotateZ(0deg); }
+
+.letter:after {
+  color: rgba(0, 0, 0, 0.11);
+  z-index: 2;
+  transform: scale(1.08, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 1deg); }
+
+.letter:hover:before {
+  color: #fafafa;
+  transform: rotateX(0deg) rotateY(-30deg) rotateZ(0deg); }
+
+.letter:hover:after {
+  transform: scale(1.08, 1) rotateX(0deg) rotateY(30deg) rotateZ(0deg) skew(0deg, 15deg); }
 
 #intro {
   background: url("../images/bg.png") no-repeat center center;
@@ -412,7 +174,7 @@ h1 {
   font-size: 40px;
   padding-left: 20px; }
   .contact > div > a:-webkit-any-link {
-    color: #46AAD9;
+    color: black;
     text-decoration: none; }
 
 .headroom {
