--- a/assets/sass/base/general.sass
+++ b/assets/sass/base/general.sass
@@ -1,4 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Lato:900)
+@import url(https://fonts.googleapis.com/css?family=Merriweather)
 
 *
   -webkit-box-sizing: border-box
