--- a/assets/sass/components/title.sass
+++ b/assets/sass/components/title.sass
@@ -1,7 +1,2 @@
 .title
-  // position: absolute
-  // top: 50%
-  // left: 50%
-  // left: 50%
-  // top: 50%
-  // position: relative
+  font-weight: 900
