--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1,4 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Lato:900);
+@import url(https://fonts.googleapis.com/css?family=Merriweather);
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -136,6 +137,9 @@ h1 {
     .contact .social .linkedin .fa:after {
       background: #007bb5; }
 
+.title {
+  font-weight: 900; }
+
 .letter, .letter--black {
   display: inline-block;
   font-weight: 900;
@@ -179,6 +183,9 @@ h1 {
 
 .letter--black:hover:before {
   color: #12121c; }
+
+.about {
+  font-family: Merriweather; }
 
 .headroom {
   text-align: center;
