--- a/assets/sass/base/general.sass
+++ b/assets/sass/base/general.sass
@@ -1,6 +1,6 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:900,400)
-@import url(https://fonts.googleapis.com/css?family=Merriweather)
-@import url(https://fonts.googleapis.com/css?family=Oswald:700)
+@import url(http://fonts.googleapis.com/css?family=Lato:900,400,600,300)
+// @import url(https://fonts.googleapis.com/css?family=Merriweather)
+// @import url(https://fonts.googleapis.com/css?family=Oswald:700)
 // @import url(http://allfont.net/allfont.css?fonts=montserrat-light)
 
 *
@@ -21,3 +21,6 @@ h1
 
 .clear
   clear: both
+
+strong
+  font-weight: 600
