--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1,6 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:900,400);
-@import url(https://fonts.googleapis.com/css?family=Merriweather);
-@import url(https://fonts.googleapis.com/css?family=Oswald:700);
+@import url(http://fonts.googleapis.com/css?family=Lato:900,400,600,300);
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -60,6 +58,9 @@ h1 {
 
 .clear {
   clear: both; }
+
+strong {
+  font-weight: 600; }
 
 .orange {
   color: #F58255; }
@@ -138,6 +139,9 @@ h1 {
       background: #125688; }
     .contact .social .linkedin .fa:after {
       background: #007bb5; }
+
+.subtitle {
+  margin-bottom: 8px; }
 
 .letter, .letter--black {
   display: inline-block;
